Fix #17824 - [Bug] Fix product specification form and activities

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
@@ -22,6 +22,7 @@ button.new-row            = Ajouter
 
 data.boolean.false                            = Non
 data.boolean.true                             = Oui
+data.list.aclEntry                            = Permissions
 data.list.activitylist                        = Activit\u00E9s
 data.list.aging                               = Vieillissement
 data.list.alcoholBeverageContainer            = Conteneurs de boisson alcoolis\u00E9e
@@ -84,6 +85,7 @@ data.list.exportproducts                      = Export des produits
 data.list.exportqualitycontrols               = Export des contr\u00F4les qualit\u00E9
 data.list.exportsupplierscontacts             = Export des contacts fournisseurs
 data.list.finishedproduct_hierarchy           = Hi\u00E9rarchie des produits finis
+data.list.forbiddenIngList                    = Ingr\u00E9dients interdits
 data.list.geoOrigin                           = Origines g\u00E9ographiques
 data.list.growingmethodcode                   = M\u00E9thodes de culture
 data.list.gs1_hierarchy                       = Hi\u00E9rarchie GS1
@@ -130,6 +132,7 @@ data.list.logoimage.supplier                  = Logo
 data.list.mapping                             = Mapping
 data.list.meattype                            = Types de viande (QUID)
 data.list.microbio                            = Caract\u00E9ristiques microbiologiques
+data.list.microbioList                        = Microbiologie
 data.list.microbiocontrolsteps                = Etapes de contr\u00F4le microbio
 data.list.microbiotype                        = Type de caract\u00E9ristiques microbiologiques
 data.list.microbiounits                       = Unit\u00E9s microbiologie
