Fix #24258 - [Feature] Add disabled property for notification, add color for init-repo notifications, remove bcpg:archivedEntityAspect from classify

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
@@ -98,6 +98,7 @@ bcpg_bcpgmodel.property.bcpg_modifiedCatalog2.title             = Date de modifi
 bcpg_bcpgmodel.property.bcpg_modifiedCatalog3.title             = Date de modification du Catalogue 3
 bcpg_bcpgmodel.property.bcpg_nrConditions.title                 = Filtre avanc\u00E9
 bcpg_bcpgmodel.property.bcpg_nrDateField.title                  = Concernant la date
+bcpg_bcpgmodel.property.bcpg_nrDisabled.title                   = D\u00E9sactiv\u00E9
 bcpg_bcpgmodel.property.bcpg_nrErrorLog.title                   = Erreur
 bcpg_bcpgmodel.property.bcpg_nrForceNotification.title          = Envoyer m\u00EAme si aucun \u00E9l\u00E9ments
 bcpg_bcpgmodel.property.bcpg_nrFrequency.title                  = R\u00E9p\u00E9ter tou(te)s les
