Fix #17367 - [Feature] Run product specification formulation in batch

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/batches_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/batches_fr.properties
@@ -20,5 +20,6 @@ becpg.batch.entityTpl.synchronizeEntities           = Synchronisation des mod\u0
 becpg.batch.entityUnarchiving                       = D\u00E9sarchivage de l''entit\u00E9 {0}
 becpg.batch.entityVersion.generateReports           = G\u00E9n\u00E9ration des rapports de version {0}
 becpg.batch.import                                  = Import du fichier ''{0}''
+becpg.batch.productSpecification.formulation        = Formulation du cahier des charges : {0}
 becpg.batch.versionCleaner.cleanOrphanVersions      = Nettoyage des versions orphelines
 becpg.batch.versionCleaner.cleanVersions            = Nettoyage des versions
