--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/custom-toolbar/entity-toolbar.get_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/custom-toolbar/entity-toolbar.get_fr.properties
@@ -96,6 +96,9 @@ reqTypes.Forbidden  = Interdit
 reqTypes.Info       = Information
 reqTypes.Tolerated  = Tol\u00E9r\u00E9
 
+specCompatibilityTestModes.Automatic = Automatique
+specCompatibilityTestModes.Manual    = Manuel
+
 tooltip.components.validation = Composants valid\u00E9s
 tooltip.mandatory.completion  = Champs obligatoires
 tooltip.notifications-button  = Vous avez {0} exigences interdites non respect\u00E9es
