--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -517,6 +517,7 @@ bcpg_bcpgmodel.property.bcpg_servingSizeText.title                              
 bcpg_bcpgmodel.property.bcpg_servingSizeUnit.title                              = Serving size unit
 bcpg_bcpgmodel.property.bcpg_specCompatibilityJobOn.title                       = Automatic compatibility test
 bcpg_bcpgmodel.property.bcpg_specCompatibilityLog.title                         = Compatibility test log
+bcpg_bcpgmodel.property.bcpg_specCompatibilityTestMode.title                    = Compatibility test mode
 bcpg_bcpgmodel.property.bcpg_storageConditionsMode.title                        = Mode
 bcpg_bcpgmodel.property.bcpg_storageConditionsTemperature.title                 = Temperature
 bcpg_bcpgmodel.property.bcpg_supplierEmail.description                          = Email the company
@@ -800,6 +801,8 @@ listconstraint.bcpg_reqTypes.Authorized                               = Authoriz
 listconstraint.bcpg_reqTypes.Forbidden                                = Forbidden
 listconstraint.bcpg_reqTypes.Info                                     = Information
 listconstraint.bcpg_reqTypes.Tolerated                                = Tolerated
+listconstraint.bcpg_specCompatibilityTestModes.Automatic              = Automatic
+listconstraint.bcpg_specCompatibilityTestModes.Manual                 = Manual
 listconstraint.bcpg_synchronisableStates.Manual                       = Manual
 listconstraint.bcpg_synchronisableStates.Synchronized                 = Synchronized
 listconstraint.bcpg_synchronisableStates.Template                     = Template
