Fix #25331 - [Bug] Add pjt_allowedPriority labels in activities

--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel_fr.properties
@@ -1,4 +1,7 @@
 
+listconstraint.pjt_allowedPriority.1                   = \u00C9lev\u00E9e
+listconstraint.pjt_allowedPriority.2                   = Moyenne
+listconstraint.pjt_allowedPriority.3                   = Basse
 listconstraint.pjt_deliverableStates.Closed            = Ferm\u00E9
 listconstraint.pjt_deliverableStates.Completed         = Termin\u00E9
 listconstraint.pjt_deliverableStates.InProgress        = En cours
