Fix #24474 - [Feature] Formulate Decernis only from regulatory lists

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get_fr.properties
@@ -31,6 +31,7 @@ button.entity-view-details.description       = Visualiser les d\u00E9tails
 button.entity-view-documents                 = Visualiser les documents
 button.entity-view-documents.description     = Visualiser les documents
 button.formulate                             = Formuler
+button.formulate-decernis.description        = Calcule les caract\u00E9ristiques du produit \u00E0 partir des composants mis en oeuvre, ainsi que la conformit\u00E9 r\u00E9glementaire
 button.formulate.description                 = Calcule les caract\u00E9ristiques du produit \u00E0 partir des composants mis en oeuvre
 button.full-screen                           = &nbsp;
 button.full-screen.description               = Mode plein \u00E9cran
