--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -394,6 +394,8 @@ bcpg_bcpgmodel.property.bcpg_nutFormula.title                                   
 bcpg_bcpgmodel.property.bcpg_nutGDA.title                                       = RNJ/AJR
 bcpg_bcpgmodel.property.bcpg_nutGroup.title                                     = Groupe
 bcpg_bcpgmodel.property.bcpg_nutListFormulaErrorLog.title                       = Erreur de formulation
+bcpg_bcpgmodel.property.bcpg_nutListFormulatedMaxi.title                        = Maxi calcul\u00E9
+bcpg_bcpgmodel.property.bcpg_nutListFormulatedMini.title                        = Mini calcul\u00E9
 bcpg_bcpgmodel.property.bcpg_nutListFormulatedValue.title                       = Valeur calcul\u00E9e
 bcpg_bcpgmodel.property.bcpg_nutListGDAPerc.title                               = % AR par portion
 bcpg_bcpgmodel.property.bcpg_nutListGroup.title                                 = Groupe
