Fix #24055 - [Feature] Add alias managment in labeling replacement

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -282,6 +282,7 @@ bcpg_bcpgmodel.property.bcpg_illManualValue.title                               
 bcpg_bcpgmodel.property.bcpg_illValue.title                                     = Etiquette
 bcpg_bcpgmodel.property.bcpg_ingAllergensQtyPerc.title                          = Taux d'allerg\u00E8nes apport\u00E9s %
 bcpg_bcpgmodel.property.bcpg_ingCEECode.title                                   = No. E
+bcpg_bcpgmodel.property.bcpg_ingListComments.title                              = Informations compl\u00E9mentaires
 bcpg_bcpgmodel.property.bcpg_ingListDeclType.title                              = Type de d\u00E9claration
 bcpg_bcpgmodel.property.bcpg_ingListIsGMO.title                                 = OGM
 bcpg_bcpgmodel.property.bcpg_ingListIsIonized.title                             = Ionisation
