--- a/becpg-share/src/main/resources/alfresco/messages/becpg-model_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-model_fr.properties
@@ -5,6 +5,7 @@ aspect.bcpg_entityBranchAspect      = Branche
 aspect.bcpg_entityTplAspect         = Mod\u00E8le d'entit\u00E9
 aspect.bcpg_entityVariantAspect     = Variante
 aspect.bcpg_lcaScoreAspect          = Score ACV
+aspect.bcpg_linkedSearchAspect      = Alias de recherche
 aspect.bcpg_permissionsTpl          = Mod\u00E8le de permissions
 aspect.bcpg_subEntityAspect         = Entit\u00E9 enfant
 aspect.bp_cataloguable              = Catalogue
