--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -41,6 +41,7 @@ becpg.forms.set.audit.label            = Audit
 becpg.forms.set.branch.label           = Version
 becpg.forms.set.category.label         = Cat\u00E9gories
 becpg.forms.set.designation.label      = D\u00E9signation
+becpg.forms.set.search.label           = Recherche
 becpg.forms.set.template.label         = Mod\u00E8le
 
 button.bulkEdit                 = Edition multiple
