--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
@@ -273,7 +273,9 @@ entity.activity.datalist.delete        = A supprim\u00E9 {0} dans la liste {1}
 entity.activity.datalist.simple        = A modifi\u00E9 la liste {0}
 entity.activity.datalist.update        = A modifi\u00E9 {0} dans la liste {1} 
 entity.activity.entity                 = A modifi\u00E9 les propri\u00E9t\u00E9s de l'entit\u00E9 {0} 
+entity.activity.entity.added-aspect    = A ajout\u00E9 les aspects suivants sur l'entit\u00E9 ''{0}'' : {1}
 entity.activity.entity.create          = A cr\u00E9\u00E9 l''entit\u00E9 {0}
+entity.activity.entity.removed-aspect  = A retir\u00E9 les aspects suivants de l'entit\u00E9 ''{0}'' : {1}
 entity.activity.export                 = A export\u00E9 la liste {0} dans le fichier '{1}'
 entity.activity.formulation            = A formul\u00E9 {0} 
 entity.activity.merge                  = A rang\u00E9 la version {0}
