Fix #25744 - [Security] Add BranchManager role, fix permissions for classify

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -67,7 +67,8 @@ file.status-ppt   = ({0} sur {1} entit\u00E9s ajout\u00E9es)
 
 fr.becpg.export = {1} a r\u00E9alis\u00E9 l''export du fichier ''{2}''
 
-group.SiteBranchManager = Gestionnaire de version
+group.SiteBranchManager     = Gestionnaire de version
+group.SiteBranchOnlyManager = Gestionnaire de branch
 
 header.becpg-admin.description   = Console d'administration beCPG
 header.becpg-admin.label         = Administration beCPG
@@ -190,10 +191,13 @@ page.userLanguage.title                           = Param\u00E8tres de langue
 page.wizard.description                           = Affiche un assistant
 page.wizard.title                                 = Assistant
 
-role.SiteBranchManager  = Gestionnaire de version
-role.sitebranchmanager  = Gestionnaire de version
+role.SiteBranchManager      = Gestionnaire de version
+role.SiteBranchOnlyManager  = Gestionnaire de branche
+role.sitebranchmanager      = Gestionnaire de version
+role.sitebranchonlymanager  = Gestionnaire de branche
 
-roles.sitebranchmanager = Gestionnaire de version
+roles.sitebranchmanager     = Gestionnaire de version
+roles.sitebranchonlymanager = Gestionnaire de branche
 
 status.label-doc   = Cr\u00E9ation d'un fichier word
 status.label-excel = Cr\u00E9ation d'un fichier excel
