InProgress #25570 - [Feature] Add clpList

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -75,7 +75,7 @@ path.geoorigins                          = Origines g\u00E9ographiques
 path.growingmethodcode					 = M\u00E9thodes de culture
 path.gs1_hierarchy                       = Hi\u00E9rarchie GS1
 path.handlinginstructions                = Instructions de manutention
-path.hazardcategories                    = Classes de danger
+path.hazardcategories                    = Catégories de danger
 path.hazardstatements                    = Mentions de danger
 path.import                              = Import
 path.importfailed                        = Trait\u00E9 avec \u00E9chec
