--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
@@ -109,10 +109,10 @@ data.list.exportqualitycontrols               = Export des contr\u00F4les qualit
 data.list.exportsupplierscontacts             = Export des contacts fournisseurs
 data.list.finishedproduct_hierarchy           = Hi\u00E9rarchie des produits finis
 data.list.geoOrigin                           = Origines g\u00E9ographiques
-data.list.growingmethodcode					  = M\u00E9thodes de culture
+data.list.growingmethodcode                   = M\u00E9thodes de culture
 data.list.gs1_hierarchy                       = Hi\u00E9rarchie GS1
 data.list.handlinginstructions                = Instructions de manutention
-data.list.hazardcategories                    = Classes de danger
+data.list.hazardcategories                    = Cat\u00E9gories de danger
 data.list.hazardstatements                    = Mentions de danger
 data.list.import                              = Import
 data.list.importfailed                        = Trait\u00E9 avec \u00E9chec
@@ -172,13 +172,13 @@ data.list.organoList                          = Organoleptique
 data.list.packMaterial                        = Mat\u00E9riaux
 data.list.packMaterialList                    = Mat\u00E9riaux
 data.list.packagingList                       = Emballages
+data.list.packagingfunctioncode               = Fonction de l'emballage
 data.list.packaginggroupcodes                 = Codes groupe emballage
 data.list.packagingkit_hierarchy              = Hi\u00E9rarchie des kits d'emballages
 data.list.packaginglevels                     = Niveaux de packaging
 data.list.packagingmaterial_hierarchy         = Hi\u00E9rarchie des emballages
 data.list.packagingrecyclingschemecode        = Sch\u00E9mas de tri
 data.list.packagingtermsandconditionscode     = Indications d'emballage r\u00E9utilisable
-data.list.packagingfunctioncode               = Fonction de l'emballage
 data.list.packagingtypecode                   = Types d'emballage
 data.list.pallettypecode                      = Types de support palette
 data.list.personalprotection                  = Equipements de protection individuelle
@@ -320,6 +320,10 @@ message.async-mail.eco.calculateWUsed.body            = L''analyse d''impact de 
 message.async-mail.eco.calculateWUsed.subject         = [Notification]Fin de l'analyse d'impact
 message.async-mail.eco.simulate.body                  = La simulation de l''ordre de modification {0} 
 message.async-mail.eco.simulate.subject               = [Notification]Fin de l'action simuler un OM
+message.clp.formula.error                             = Erreur dans la formule de classification des dangers : {0}
+message.clp.hazardStatement.notFound                  = D\u00E9claration de danger introuvable avec le code {0}
+message.clp.missingCharacts                           = Erreur de calcul de la classification des dangers en raison d'\u00E9l\u00E9ments incomplets :
+message.clp.pictogram.notFound                        = Pictogramme introuvable avec le code {0}
 message.decernis.charact.noCode                       = Aucun code r\u00E9glementaire trouv\u00E9 pour {0}
 message.decernis.error                                = Erreur d''execution decernis:  {0}
 message.decernis.function.notRecognized               = Fonction non reconnue : {0}
