--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel_fr.properties
@@ -1,5 +1,7 @@
 
 ghs_ghsmodel.aspect.ghs_sdsAspect.title                       = MSDS Aspect
+ghs_ghsmodel.association.ghs_hazardStatementRef.title         = Mention de danger
+ghs_ghsmodel.association.ghs_pictogramRef.title               = Pictogramme
 ghs_ghsmodel.association.ghs_sdsClassCode.title               = Code classe
 ghs_ghsmodel.association.ghs_sdsHazardStatements.title        = Mentions de danger
 ghs_ghsmodel.association.ghs_sdsOnuCode.title                 = Code ONU
@@ -8,7 +10,7 @@ ghs_ghsmodel.association.ghs_sdsPersonalProtections.title     = Equipements de p
 ghs_ghsmodel.association.ghs_sdsPictograms.title              = Pictogrammes
 ghs_ghsmodel.association.ghs_sdsPrecautionaryStatements.title = Conseils de prudence
 ghs_ghsmodel.property.ghs_classCodeNumber.title               = Code
-ghs_ghsmodel.property.ghs_hazardClassCode.title               = Classe de danger
+ghs_ghsmodel.property.ghs_hazardClassCode.title               = Categorie de danger
 ghs_ghsmodel.property.ghs_hazardCode.title                    = Code
 ghs_ghsmodel.property.ghs_hazardType.title                    = Type
 ghs_ghsmodel.property.ghs_onuCodeNumber.title                 = Code
@@ -16,6 +18,7 @@ ghs_ghsmodel.property.ghs_packagingGroupCodeNumber.title      = Code
 ghs_ghsmodel.property.ghs_pictogramCode.title                 = Code
 ghs_ghsmodel.property.ghs_precautionaryCode.title             = Code
 ghs_ghsmodel.property.ghs_precautionaryType.title             = Type
+ghs_ghsmodel.property.ghs_sdsHazardClassifications.title      = Classes de dangers
 ghs_ghsmodel.property.ghs_sdsSafetyInstructions.title         = Consignes de s\u00E9curit\u00E9
 ghs_ghsmodel.property.ghs_sdsSheetEffectiveDate.title         = Date d'effectivit\u00E9 FDS
 ghs_ghsmodel.property.ghs_sdsSheetNumber.title                = Num\u00E9ro de FDS
