InProgress #25570 - [Feature] Add clpList

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel_en.properties
@@ -13,6 +13,8 @@ ghs_ghsmodel.property.ghs_classCodeNumber.title               = Code
 ghs_ghsmodel.property.ghs_hazardClassCode.title               = Hazard category
 ghs_ghsmodel.property.ghs_hazardCode.title                    = Code
 ghs_ghsmodel.property.ghs_hazardType.title                    = Type
+ghs_ghsmodel.property.ghs_hclDetail.title                     = Detail
+ghs_ghsmodel.property.ghs_hclRegulatoryText.title             = Regulatory Text
 ghs_ghsmodel.property.ghs_onuCodeNumber.title                 = Code
 ghs_ghsmodel.property.ghs_packagingGroupCodeNumber.title      = Code
 ghs_ghsmodel.property.ghs_pictogramCode.title                 = Code
@@ -25,6 +27,8 @@ ghs_ghsmodel.property.ghs_sdsSheetNumber.title                = SDS Number
 ghs_ghsmodel.property.ghs_sdsSignalWord.title                 = Signal Word
 ghs_ghsmodel.property.ghs_sdsStandardCode.title               = SDS standard
 ghs_ghsmodel.property.ghs_signalWord.title                    = Signal Word
+ghs_ghsmodel.type.ghs_hazardClassificationList.description    = Hazard classification
+ghs_ghsmodel.type.ghs_hazardClassificationList.title          = Hazard classification
 ghs_ghsmodel.type.ghs_hazardStatement.description             = List of hazard statements
 ghs_ghsmodel.type.ghs_hazardStatement.title                   = Hazard statement
 ghs_ghsmodel.type.ghs_personalProtection.description          = List of personal protections
