--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel_fr.properties
@@ -13,6 +13,8 @@ ghs_ghsmodel.property.ghs_classCodeNumber.title               = Code
 ghs_ghsmodel.property.ghs_hazardClassCode.title               = Categorie de danger
 ghs_ghsmodel.property.ghs_hazardCode.title                    = Code
 ghs_ghsmodel.property.ghs_hazardType.title                    = Type
+ghs_ghsmodel.property.ghs_hclDetail.title                     = Detail
+ghs_ghsmodel.property.ghs_hclRegulatoryText.title             = Texte r\u00E9glementaire
 ghs_ghsmodel.property.ghs_onuCodeNumber.title                 = Code
 ghs_ghsmodel.property.ghs_packagingGroupCodeNumber.title      = Code
 ghs_ghsmodel.property.ghs_pictogramCode.title                 = Code
@@ -25,6 +27,8 @@ ghs_ghsmodel.property.ghs_sdsSheetNumber.title                = Num\u00E9ro de F
 ghs_ghsmodel.property.ghs_sdsSignalWord.title                 = Mention d'avertissement
 ghs_ghsmodel.property.ghs_sdsStandardCode.title               = Standard FDS
 ghs_ghsmodel.property.ghs_signalWord.title                    = Avertissement
+ghs_ghsmodel.type.ghs_hazardClassificationList.description    = Repr\u00E9sente la classification des dangers associ\u00E9s \u00E0 l'\u00E9l\u00E9ment.
+ghs_ghsmodel.type.ghs_hazardClassificationList.title          = Classification des Dangers
 ghs_ghsmodel.type.ghs_hazardStatement.description             = Liste des mentions de danger
 ghs_ghsmodel.type.ghs_hazardStatement.title                   = Mention de danger
 ghs_ghsmodel.type.ghs_personalProtection.description          = Liste des \u00E9quipements de protection individuelle
