--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -20,6 +20,7 @@ path.claimtypes                          = Types de r\u00E9clamations
 path.classcodes                          = Codes classe
 path.client_hierarchy                    = Hi\u00E9rarchie des clients
 path.clients                             = Clients
+path.clpdatabases                        = Bases de donn\u00E9es CLP
 path.cltemperatures                      = Temp\u00E9ratures
 path.companies                           = Soci\u00E9t\u00E9s
 path.compliant                           = Conforme
@@ -72,10 +73,10 @@ path.exportsurvey                        = Export des questionnaires
 path.exportsvhc                          = Export des substances dangereuses
 path.finishedproduct_hierarchy           = Hi\u00E9rarchie des produits finis
 path.geoorigins                          = Origines g\u00E9ographiques
-path.growingmethodcode					 = M\u00E9thodes de culture
+path.growingmethodcode                   = M\u00E9thodes de culture
 path.gs1_hierarchy                       = Hi\u00E9rarchie GS1
 path.handlinginstructions                = Instructions de manutention
-path.hazardcategories                    = Catégories de danger
+path.hazardcategories                    = Cat\u00E9gories de danger
 path.hazardstatements                    = Mentions de danger
 path.import                              = Import
 path.importfailed                        = Trait\u00E9 avec \u00E9chec
@@ -124,6 +125,7 @@ path.nuts                                = Nutriments
 path.nuttypes                            = Types de nutriments
 path.onucodes                            = Codes ONU
 path.organos                             = Caract\u00E9ristiques organoleptiques
+path.packagingfunctioncodes              = Fonction de l'emballage
 path.packaginggroupcodes                 = Codes groupe emballage
 path.packagingkit_hierarchy              = Hi\u00E9rarchie des kits d'emballages
 path.packaginglevels                     = Niveaux de packaging
@@ -131,7 +133,6 @@ path.packagingmaterial_hierarchy         = Hi\u00E9rarchie des emballages
 path.packagingmaterials                  = Mat\u00E9riaux
 path.packagingrecyclingschemecode        = Sch\u00E9mas de tri
 path.packagingtermsandconditionscode     = Indications d'emballage r\u00E9utilisable
-path.packagingfunctioncodes              = Fonction de l'emballage
 path.packagingtypecodes                  = Types d'emballage
 path.pallettypecodes                     = Types de support palette
 path.personalprotections                 = Equipements de protection individuelle
