Fix #25922 - [Bug] Fix display of regulatory list activities

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
@@ -206,6 +206,7 @@ data.list.rawmaterial_hierarchy               = Hi\u00E9rarchie des mati\u00E8re
 data.list.rawmaterialreporttemplate           = Fiche Technique Fournisseur
 data.list.referencing                         = R\u00E9f\u00E9rencement
 data.list.regulations                         = R\u00E9glementation
+data.list.regulatoryList                      = Conformit\u00E9s
 data.list.regulatoryUsage                     = Usages r\u00E9glementaires
 data.list.reqCtrlList                         = Exigences non respect\u00E9es
 data.list.resourceParam                       = Param\u00E8tres ressource
