--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
@@ -109,7 +109,7 @@ data.list.exportqualitycontrols               = Export des contr\u00F4les qualit
 data.list.exportsupplierscontacts             = Export des contacts fournisseurs
 data.list.finishedproduct_hierarchy           = Hi\u00E9rarchie des produits finis
 data.list.geoOrigin                           = Origines g\u00E9ographiques
-data.list.growingmethodcode					  = M\u00E9thodes de culture
+data.list.growingmethodcode                   = M\u00E9thodes de culture
 data.list.gs1_hierarchy                       = Hi\u00E9rarchie GS1
 data.list.handlinginstructions                = Instructions de manutention
 data.list.hazardcategories                    = Classes de danger
@@ -172,13 +172,13 @@ data.list.organoList                          = Organoleptique
 data.list.packMaterial                        = Mat\u00E9riaux
 data.list.packMaterialList                    = Mat\u00E9riaux
 data.list.packagingList                       = Emballages
+data.list.packagingfunctioncode               = Fonction de l'emballage
 data.list.packaginggroupcodes                 = Codes groupe emballage
 data.list.packagingkit_hierarchy              = Hi\u00E9rarchie des kits d'emballages
 data.list.packaginglevels                     = Niveaux de packaging
 data.list.packagingmaterial_hierarchy         = Hi\u00E9rarchie des emballages
 data.list.packagingrecyclingschemecode        = Sch\u00E9mas de tri
 data.list.packagingtermsandconditionscode     = Indications d'emballage r\u00E9utilisable
-data.list.packagingfunctioncode               = Fonction de l'emballage
 data.list.packagingtypecode                   = Types d'emballage
 data.list.pallettypecode                      = Types de support palette
 data.list.personalprotection                  = Equipements de protection individuelle
@@ -227,6 +227,7 @@ data.list.rawmaterial_hierarchy               = Hi\u00E9rarchie des mati\u00E8re
 data.list.rawmaterialreporttemplate           = Fiche Technique Fournisseur
 data.list.referencing                         = R\u00E9f\u00E9rencement
 data.list.regulations                         = R\u00E9glementation
+data.list.regulatoryList                      = Conformit\u00E9s
 data.list.regulatoryUsage                     = Usages r\u00E9glementaires
 data.list.reqCtrlList                         = Exigences non respect\u00E9es
 data.list.resourceParam                       = Param\u00E8tres ressource
