Fix #25932 - [Bug] Improve system property message for non effective extraction

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
@@ -41,7 +41,7 @@ beCPG.product.report.extraImagePaths.description               = Liste de xPath 
 beCPG.product.report.extractRawMaterial.description            = Permet d'extraire les mati\u00E8res premi\u00E8res
 beCPG.product.report.multiLevel.description                    = Permet de sp\u00E9cifier si la composition doit \u00EAtre extraite en multi-niveaux pour les rapports
 beCPG.product.report.multilineProperties.description           = Permet d\u2019extraire la propri\u00E9t\u00E9 dans un champ CDATA pour conserver les retours \u00E0 la ligne. Instruction, description et commentaire produit sont toujours extraits dans un bloc CDATA, les autres sont mis dans un attribut
-beCPG.product.report.nonEffectiveComponent.description         = Extrait les lignes non effectives en plus des lignes effectives
+beCPG.product.report.nonEffectiveComponent.description         = Si "true", le syst\u00E8me extrait les \u00E9l\u00E9ments non effectifs dans les listes composition, emballage et process
 beCPG.product.report.nutList.localesToExtract.description      = Permet de lister les r\u00E9gulations (code du pays) avec lesquelles les nutriments seront arrondis, s\u00E9par\u00E9es par des virgules
 beCPG.product.report.priceBreaks.description                   = Permet d'afficher la liste co\u00FBt en fonction des quantit\u00E9s d'achats
 beCPG.product.report.showDeprecatedXml.description             = Affiche les GDA et les nutriments dans l\u2019ancien format
