--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
@@ -103,7 +103,7 @@ caskStrength = Laimentamattomana?
 
 cdlFreq = Taajuus
 
-cdlQty = Valvottava m\u00e4\u00e4r\u00e4
+cdlQty = Valvottava m\u00E4\u00E4r\u00E4
 
 certificatAgence = Sertifiointilaitos
 
@@ -585,7 +585,7 @@ pmAdditionalMaterial = Lis\u00E4materiaali:
 
 pmCoilDiameter = Kelan halkaisija (mm) : 
 
-pmConsumerUsageInstructions = Kuluttajak\u00e4ytt\u00f6ohjeet: 
+pmConsumerUsageInstructions = Kuluttajak\u00E4ytt\u00F6ohjeet: 
 
 pmCoreDiameter = Istukan halkaisija (mm) : 
 
@@ -605,13 +605,13 @@ pmIntLength = Sis\u00E4inen leveys (mm):
 
 pmIntWidth = Sis\u00E4inen leveys (mm): 
 
-pmIsPackagingMarkedReturnable = Mainitse "pakkaus / palautuspakkaus" merkitty (kyll\u00e4 / ei): 
+pmIsPackagingMarkedReturnable = Mainitse "pakkaus / palautuspakkaus" merkitty (kyll\u00E4 / ei): 
 
-pmPackagingRecyclingProcessTypeCode = Pakkauksen kierr\u00e4tysprosessin tyyppi: 
+pmPackagingRecyclingProcessTypeCode = Pakkauksen kierr\u00E4tysprosessin tyyppi: 
 
-pmPackagingRecyclingSchemeCode = Kierr\u00e4tyssuunnitelmat: 
+pmPackagingRecyclingSchemeCode = Kierr\u00E4tyssuunnitelmat: 
 
-pmPackagingTermsAndConditionCode = Merkinn\u00e4t uudelleenk\u00e4ytett\u00e4vist\u00e4 pakkauksista: 
+pmPackagingTermsAndConditionCode = Merkinn\u00E4t uudelleenk\u00E4ytett\u00E4vist\u00E4 pakkauksista: 
 
 pmPaperWeight = Paino (g/m\u00B2): 
 
@@ -706,6 +706,8 @@ qtymanufacture = 100 gramman tuotteen valmistusm\u00E4\u00E4r\u00E4 toleransseil
 quantity = M\u00E4\u00E4r\u00E4
 
 quantityBreak = M\u00E4\u00E4r\u00E4ajo
+
+questionnaire = KYSELYLOMAKE
 
 qunatitySaleUnit = M\u00E4\u00E4r\u00E4 (myyntiyksik\u00F6t)
 
@@ -803,7 +805,7 @@ support = Tuki
 
 surfaceOfCheeseAtEndOfRipeningCode = Juuston pinta kypsytyksen loppuvaiheessa
 
-svhc = HUOLTA AIHEUTTAVAT AINEET
+svhc = VAARALLISET AINEET
 
 svhcListIng = Aine
 
