--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
@@ -103,7 +103,7 @@ caskStrength = Non dilu\u00E9e ?
 
 cdlFreq = Fr\u00E9quence
 
-cdlQty = Quantit\u00E9 \u00e0 contr\u00f4ler
+cdlQty = Quantit\u00E9 \u00E0 contr\u00F4ler
 
 certificatAgence = Agence de certification
 
@@ -707,6 +707,8 @@ quantity = Quantit\u00E9
 
 quantityBreak = Quantit\u00E9 d'achat
 
+questionnaire = QUESTIONNAIRE
+
 qunatitySaleUnit = Quantit\u00E9 (Unit\u00E9s de vente)
 
 rank = Rang
@@ -803,7 +805,7 @@ support = Support
 
 surfaceOfCheeseAtEndOfRipeningCode = Surface du fromage en fin de maturation
 
-svhc = SUBSTANCES PR\u00C9OCCUPANTES
+svhc = SUBSTANCES DANGEREUSES
 
 svhcListIng = Substance
 
