--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_nl.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_nl.properties
@@ -707,6 +707,8 @@ quantity = Aantal stuks
 
 quantityBreak = Aankoop hoeveelheid
 
+questionnaire = VRAGENLIJST
+
 qunatitySaleUnit = Aantal (Verkoopeenheden)
 
 rank = Rang
@@ -803,7 +805,7 @@ support = Steun
 
 surfaceOfCheeseAtEndOfRipeningCode = Oppervlak van de kaas aan het einde van de rijping
 
-svhc = ZORGWEKKENDE STOFFEN
+svhc = GEVAARLIJKE STOFFEN
 
 svhcListIng = Stof
 
