--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
@@ -103,7 +103,7 @@ caskStrength = \u672A\u7A00\u91CA\uFF1F
 
 cdlFreq = \u9891\u7387
 
-cdlQty = \u6570\u91cf\u8981\u63a7\u5236
+cdlQty = \u6570\u91CF\u8981\u63A7\u5236
 
 certificatAgence = \u8BA4\u8BC1\u673A\u6784
 
@@ -707,6 +707,8 @@ quantity = \u6570\u91CF
 
 quantityBreak = \u6570\u91CF\u7A81\u7834
 
+questionnaire = \u95EE\u5377\u8C03\u67E5
+
 qunatitySaleUnit = \u6570\u91CF\uFF08\u9500\u552E\u5355\u4F4D\uFF09
 
 rank = \u79E9
@@ -803,7 +805,7 @@ support = \u652F\u6301
 
 surfaceOfCheeseAtEndOfRipeningCode = \u6210\u719F\u672B\u671F\u7684\u5976\u916A\u8868\u9762
 
-svhc = \u5173\u6CE8\u7269\u8D28
+svhc = \u6709\u5BB3\u7269\u8D28
 
 svhcListIng = \u7269\u8D28
 
