--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_en.properties
@@ -707,6 +707,8 @@ quantity = Quantity
 
 quantityBreak = Quantity break
 
+questionnaire = QUESTIONNAIRE
+
 qunatitySaleUnit = Quantity (Sale Units)
 
 rank = Rank
@@ -803,7 +805,7 @@ support = Support
 
 surfaceOfCheeseAtEndOfRipeningCode = Surface of the cheese at the end of ripening
 
-svhc = SUBSTANCES OF CONCERN
+svhc = HAZARDOUS SUBSTANCES
 
 svhcListIng = Substance
 
