--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
@@ -103,7 +103,7 @@ caskStrength = Non diluito?
 
 cdlFreq = Frequenza
 
-cdlQty = Quantit\u00e0 da controllare
+cdlQty = Quantit\u00E0 da controllare
 
 certificatAgence = Agenzia di certificazione
 
@@ -605,7 +605,7 @@ pmIntLength = Lunghezza interna (mm):
 
 pmIntWidth = Larghezza interna (mm):
 
-pmIsPackagingMarkedReturnable = Menzione "imballaggio / imballaggio restituibile" contrassegnato (s\u00ec / no): 
+pmIsPackagingMarkedReturnable = Menzione "imballaggio / imballaggio restituibile" contrassegnato (s\u00EC / no): 
 
 pmPackagingRecyclingProcessTypeCode = Tipo di processo di riciclaggio degli imballaggi: 
 
@@ -707,6 +707,8 @@ quantity = Quantit\u00E0
 
 quantityBreak = Quantit\u00E0 d'acquisto
 
+questionnaire = QUESTIONARIO
+
 qunatitySaleUnit = Quantit\u00E0 (Unit\u00E0 di vendita)
 
 rank = Rango
@@ -803,7 +805,7 @@ support = Supporto
 
 surfaceOfCheeseAtEndOfRipeningCode = Superficie del formaggio a fine maturazione
 
-svhc = SOSTANZE DI INTERESSE
+svhc = SOSTANZE PERICOLOSE
 
 svhcListIng = Sostanza
 
