--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
@@ -585,7 +585,7 @@ pmAdditionalMaterial = Ytterligare material:
 
 pmCoilDiameter = Spindiameter (mm) : 
 
-pmConsumerUsageInstructions = Användningsinstruktioner för konsumenter: 
+pmConsumerUsageInstructions = Anv\u00E4ndningsinstruktioner f\u00F6r konsumenter: 
 
 pmCoreDiameter = Chuckdiameter (mm) : 
 
@@ -605,13 +605,13 @@ pmIntLength = Intern bredd (mm):
 
 pmIntWidth = Intern bredd (mm): 
 
-pmIsPackagingMarkedReturnable = Nämn "förpackning / returemballage" markerad (ja / nej): 
+pmIsPackagingMarkedReturnable = N\u00E4mn "f\u00F6rpackning / returemballage" markerad (ja / nej): 
 
-pmPackagingRecyclingProcessTypeCode = Förpackningsåtervinningsprocesstyp: 
+pmPackagingRecyclingProcessTypeCode = F\u00F6rpacknings\u00E5tervinningsprocesstyp: 
 
-pmPackagingRecyclingSchemeCode = Återvinningsprogram: 
+pmPackagingRecyclingSchemeCode = \u00C5tervinningsprogram: 
 
-pmPackagingTermsAndConditionCode = Angivande av återanvändningsbar förpackning: 
+pmPackagingTermsAndConditionCode = Angivande av \u00E5teranv\u00E4ndningsbar f\u00F6rpackning: 
 
 pmPaperWeight = Vikt (g/m\u00B2): 
 
@@ -706,6 +706,8 @@ qtymanufacture = Kvantitet att tillverka 100 g produkt med toleranser (g)
 quantity = Kvantitet
 
 quantityBreak = Kvantitetsavbrott
+
+questionnaire = FR\u00C5GEFORMUL\u00C4R
 
 qunatitySaleUnit = Kvantitet (f\u00F6rs\u00E4ljningsenheter)
 
@@ -803,7 +805,7 @@ support = Support
 
 surfaceOfCheeseAtEndOfRipeningCode = Ostens yta i slutet av mognadsprocessen
 
-svhc = \u00C4MNEN SOM GER ANLEDNING TILL ORO
+svhc = FARLIGA \u00C4MNEN
 
 svhcListIng = \u00C4mne
 
