Fix #25570 - [Feature] Add clpList

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -301,13 +301,13 @@ bcpg_bcpgmodel.property.bcpg_ingListVolumeQtyPerc.description                   
 bcpg_bcpgmodel.property.bcpg_ingListVolumeQtyPerc.title                         = Volume (%)
 bcpg_bcpgmodel.property.bcpg_ingMLName.title                                    = Nom multi-langue
 bcpg_bcpgmodel.property.bcpg_ingToxAcuteDermal.description                      = Repr\u00E9sente la valeur de toxicit\u00E9 aigu\u00EB cutan\u00E9e.
-bcpg_bcpgmodel.property.bcpg_ingToxAcuteDermal.title                            = Toxicit\u00E9 Aigu\u00EB Cutan\u00E9e
+bcpg_bcpgmodel.property.bcpg_ingToxAcuteDermal.title                            = Toxicit\u00E9 Aigu\u00EB Cutan\u00E9e (mg/kg)
 bcpg_bcpgmodel.property.bcpg_ingToxAcuteInhalation.description                  = Repr\u00E9sente la valeur de toxicit\u00E9 aigu\u00EB par inhalation.
-bcpg_bcpgmodel.property.bcpg_ingToxAcuteInhalation.title                        = Toxicit\u00E9 Aigu\u00EB par Inhalation
+bcpg_bcpgmodel.property.bcpg_ingToxAcuteInhalation.title                        = Toxicit\u00E9 Aigu\u00EB par Inhalation (mg/L)
 bcpg_bcpgmodel.property.bcpg_ingToxAcuteInhalationType.description              = Sp\u00E9cifie le type de toxicit\u00E9 aigu\u00EB par inhalation.
 bcpg_bcpgmodel.property.bcpg_ingToxAcuteInhalationType.title                    = Type de Toxicit\u00E9 Aigu\u00EB par Inhalation
 bcpg_bcpgmodel.property.bcpg_ingToxAcuteOral.description                        = Repr\u00E9sente la valeur de toxicit\u00E9 aigu\u00EB orale.
-bcpg_bcpgmodel.property.bcpg_ingToxAcuteOral.title                              = Toxicit\u00E9 Aigu\u00EB Orale
+bcpg_bcpgmodel.property.bcpg_ingToxAcuteOral.title                              = Toxicit\u00E9 Aigu\u00EB Orale (mg/kg)
 bcpg_bcpgmodel.property.bcpg_ingToxAquaticMFactor.description                   = Repr\u00E9sente le facteur M pour la toxicit\u00E9 aquatique.
 bcpg_bcpgmodel.property.bcpg_ingToxAquaticMFactor.title                         = Facteur M de Toxicit\u00E9 Aquatique
 bcpg_bcpgmodel.property.bcpg_ingToxData.title                                   = Donn\u00E9es toxicologiques
