--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
@@ -157,7 +157,7 @@ becpg.forms.set.cheese.label                                   = Informations su
 becpg.forms.set.claim-info.label                               = Informations r\u00E9clamation
 becpg.forms.set.claim.label                                    = All\u00E9gations
 becpg.forms.set.client.label                                   = Client
-becpg.forms.set.clp.label                                      = Classification et \u00E9tiquetage des dangers
+becpg.forms.set.clp.label                                      = Classification des dangers
 becpg.forms.set.commercial.label                               = Donn\u00E9es commerciales
 becpg.forms.set.company.label                                  = Soci\u00E9t\u00E9
 becpg.forms.set.conditioning.label                             = Conditionnement
