Fix #24658 - [Feature] New personalProtectionCode field

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel_fr.properties
@@ -17,6 +17,7 @@ ghs_ghsmodel.property.ghs_hclDetail.title                     = Detail
 ghs_ghsmodel.property.ghs_hclRegulatoryText.title             = Texte r\u00E9glementaire
 ghs_ghsmodel.property.ghs_onuCodeNumber.title                 = Code
 ghs_ghsmodel.property.ghs_packagingGroupCodeNumber.title      = Code
+ghs_ghsmodel.property.ghs_personalProtectionCode.title        = Code
 ghs_ghsmodel.property.ghs_pictogramCode.title                 = Code
 ghs_ghsmodel.property.ghs_precautionaryCode.title             = Code
 ghs_ghsmodel.property.ghs_precautionaryType.title             = Type
