Fix #25836 - [Feature] add stockType choice in batchOrder

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -192,6 +192,7 @@ bcpg_bcpgmodel.property.bcpg_compoListQtyForProduct.title                       
 bcpg_bcpgmodel.property.bcpg_compoListQtyPercForProduct.title                   = Qt\u00E9 % pour le produit
 bcpg_bcpgmodel.property.bcpg_compoListQtyPercForSF.title                        = Qt\u00E9 % pour SF\n
 bcpg_bcpgmodel.property.bcpg_compoListQtySubFormula.title                       = Qt\u00E9 MeO
+bcpg_bcpgmodel.property.bcpg_compoListStockType.title                           = Type de stock
 bcpg_bcpgmodel.property.bcpg_compoListUnit.title                                = Unit\u00E9
 bcpg_bcpgmodel.property.bcpg_compoListVolume.title                              = Volume
 bcpg_bcpgmodel.property.bcpg_compoListYieldPerc.title                           = Rdt %
@@ -704,6 +705,9 @@ bcpg_bcpgmodel.type.bcpg_toxList.title                                          
 bcpg_bcpgmodel.type.bcpg_trademark.description                                  = Liste des marques (administration)
 bcpg_bcpgmodel.type.bcpg_trademark.title                                        = Marques
 
+listconstraint.bcpg_compoListStockTypes.Components                    = Sur les composants
+listconstraint.bcpg_compoListStockTypes.Omit                          = Omettre
+listconstraint.bcpg_compoListStockTypes.Product                       = Sur le produit
 listconstraint.bcpg_compoListUnit.P                                   = Pi\u00E8ce
 listconstraint.bcpg_compoListUnit.Perc                                = %
 listconstraint.bcpg_costTypes.Composition                             = Composition
