--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -192,6 +192,7 @@ bcpg_bcpgmodel.property.bcpg_compoListQtyForProduct.title                       
 bcpg_bcpgmodel.property.bcpg_compoListQtyPercForProduct.title                   = Qty % for product
 bcpg_bcpgmodel.property.bcpg_compoListQtyPercForSF.title                        = Qty % for SF
 bcpg_bcpgmodel.property.bcpg_compoListQtySubFormula.title                       = Qty used
+bcpg_bcpgmodel.property.bcpg_compoListStockType.title                           = Stock type
 bcpg_bcpgmodel.property.bcpg_compoListUnit.title                                = Unit
 bcpg_bcpgmodel.property.bcpg_compoListVolume.title                              = Volume
 bcpg_bcpgmodel.property.bcpg_compoListYieldPerc.title                           = Yield %
@@ -706,6 +707,9 @@ bcpg_bcpgmodel.type.bcpg_trademark.title                                        
 
 beCPG.copyOrBranch.typesToReset.description = Allows you to define type that will not be copy during a copy or merge, separated by commas
 
+listconstraint.bcpg_compoListStockTypes.Components                    = On components
+listconstraint.bcpg_compoListStockTypes.Omit                          = Omit
+listconstraint.bcpg_compoListStockTypes.Product                       = On product
 listconstraint.bcpg_compoListUnit.P                                   = Each
 listconstraint.bcpg_compoListUnit.Perc                                = %
 listconstraint.bcpg_costTypes.Composition                             = Composition
