Fix #26055 - [Feature] Improve regulatory forms

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -505,6 +505,7 @@ bcpg_bcpgmodel.property.bcpg_reconstitutionRate.title                           
 bcpg_bcpgmodel.property.bcpg_regularityId.title                                 = ID r\u00E9glementaire
 bcpg_bcpgmodel.property.bcpg_regulatoryCode.title                               = Code r\u00E8glementaire
 bcpg_bcpgmodel.property.bcpg_regulatoryComment.title                            = Commentaire de conformit\u00E9
+bcpg_bcpgmodel.property.bcpg_regulatoryFormulatedDate.title                     = Date de formulation r\u00E9glementaire
 bcpg_bcpgmodel.property.bcpg_regulatoryMaximumDosage.title                      = Dosage maximum (%)
 bcpg_bcpgmodel.property.bcpg_regulatoryMode.title                               = Mode de conformit\u00E9
 bcpg_bcpgmodel.property.bcpg_regulatoryModule.title                             = Module conformit\u00E9
