Fix #25873 - [Bug] Fix nutriscore frame messages

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
@@ -93,7 +93,7 @@ nutriscore.display.finalScore       = Score nutritionnel = N - P = {0} - {1} = {
 nutriscore.display.negative         = Composante n\u00E9gative (N) :
 nutriscore.display.nns              = Sucres non nutritifs : {0} = 4
 nutriscore.display.nspfibre         = Fibres NSP ({0} < {1} <= {2}) = {3}
-nutriscore.display.percfruitsandveg = Teneur en fruits et l\u00E9gumes ({0} <= {1} < {2}) = {3}
+nutriscore.display.percfruitsandveg = Teneur en fruits et l\u00E9gumes ({0} <= {1} <= {2}) = {3}
 nutriscore.display.positive         = Composante positive (P) :
 nutriscore.display.protein          = Prot\u00E9ines ({0} < {1} <= {2}) = {3}
 nutriscore.display.salt             = Sel ({0} < {1} <= {2}) = {3}
