--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_en.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_en.properties
@@ -88,7 +88,7 @@ nutriscore.display.finalScore       = Nutrient profiling score = N - P = {0} - {
 nutriscore.display.negative         = Negative part (N) :
 nutriscore.display.nns              = Non nutritive sugars: {0} = 4
 nutriscore.display.nspfibre         = NSP fibers ({0} < {1} <= {2}) = {3}
-nutriscore.display.percfruitsandveg = Fruit and vegetable content ({0} <= {1} < {2}) = {3}
+nutriscore.display.percfruitsandveg = Fruit and vegetable content ({0} <= {1} <= {2}) = {3}
 nutriscore.display.positive         = Positive part (P) :
 nutriscore.display.protein          = Protein ({0} < {1} <= {2}) = {3}
 nutriscore.display.salt             = Salt ({0} < {1} <= {2}) = {3}
@@ -127,7 +127,7 @@ search.form.label.bcpg_logisticUnit         = Logistic unit
 search.form.label.bcpg_packagingKit         = Packaging kit
 search.form.label.bcpg_packagingMaterial    = Packaging material
 search.form.label.bcpg_product              = Products
-search.form.label.bcpg_productCollection   	= Collection
+search.form.label.bcpg_productCollection    = Collection
 search.form.label.bcpg_productSpecification = Specification
 search.form.label.bcpg_rawMaterial          = Raw material
 search.form.label.bcpg_resourceProduct      = Resource
