Fix #21967 - [Feature] Added organic place of farming country field

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -30,6 +30,7 @@ gs1_gs1Model.association.gs1_dutyFeeTaxCountry.title                            
 gs1_gs1Model.association.gs1_dutyFeeTaxRef.title                                          = Taxe
 gs1_gs1Model.association.gs1_dutyFeeTaxes.description                                     = D\u00E9tails sur un droit, une charge ou une taxe pouvant s'appliquer \u00E0 un article commercial, y compris l'applicabilit\u00E9, le taux et le montant.
 gs1_gs1Model.association.gs1_dutyFeeTaxes.title                                           = Taxes
+gs1_gs1Model.association.gs1_organicProductPlaceOfFarmingCountry.title                    = Pays d'origine des ingr\u00E9dients
 gs1_gs1Model.association.gs1_promotionalArticleRef.title                                  = Article standard r\u00E9f\u00E9rent
 gs1_gs1Model.association.gs1_targetMarketCountries.description                            = Liste des pays repr\u00E9sentant le march\u00E9 cible
 gs1_gs1Model.association.gs1_targetMarketCountries.title                                  = Pays
