[Standard feature] Add µm in number-unit.ftl

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
@@ -255,6 +255,7 @@ becpg.forms.unit.pp                                            = \u2030
 becpg.forms.unit.ppm                                           = ppm
 becpg.forms.unit.u00B5                                         = \u00B5
 becpg.forms.unit.u00B5g                                        = \u00B5g
+becpg.forms.unit.u00B5m                                        = \u00B5m
 becpg.forms.unit.y                                             = A
 becpg.forms.variant                                            = Variante
 becpg.wizard.supplier.allergenList.label                       = Allerg\u00E8nes
