Fix #27393 - [Standard feature] Add µm and µg in number-unit.ftl

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_en.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_en.properties
@@ -243,6 +243,8 @@ becpg.forms.unit.mL                                            = mL
 becpg.forms.unit.mega                                          = 10e6
 becpg.forms.unit.mg                                            = mg
 becpg.forms.unit.micro                                         = 10e-6
+becpg.forms.unit.micro_g                                       = \u00B5g
+becpg.forms.unit.micro_m                                       = \u00B5m
 becpg.forms.unit.mil                                           = mil
 becpg.forms.unit.milli                                         = 10e-3
 becpg.forms.unit.mm                                            = mm
